<resources>

    <string name="could_you_enter_note_please">Could You enter note, please</string>
    <string name="welcome">Welcome</string>
    <string name="ok">OK</string>
    <string name="add_note">Add Note</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_username_please">Enter Your Username, please</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="Setting">Setting</string>
    <string name="log_out">Log Out</string>
    <string name="Delete_this_user">Delete user</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Agree_at_delete">Are you sure? All user data will be removed from device!</string>
    <string name="Cloud_storage">Cloud storage</string>
    <string name="Work_with_note">Work with note</string>
    <string name="My_Notes">My Notes</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="sing_up_next"><![CDATA[Sing Up ->]]></string>
    <string name="Press_back">Press \"back\" again to exit</string>
    <string name="User_deleted_successfully">User deleted successfully</string>
    <string name="User_not_delete">User wasn\'t  deleted, try again</string>
    <string name="Failed_to_perform_cloud_operation">Failed to perform cloud operation</string>
    <string name="pick_cloud_action">Please, pick cloud action</string>
    <string name="Import">Import</string>
    <string name="Export">Export</string>
    <string name="User_not_exist">User not exist</string>
    <string name="Wrong_password">Wrong password</string>
    <string name="Empty_fields">Empty fields</string>
    <string name="Login_completed_successfully">Login completed successfully</string>
    <string name="User_already_exists">User already exists</string>
    <string name="User_created_successful">User created successful</string>
    <string name="Passwords_do_not_match">Passwords do not match</string>
    <string name="notify">Notify</string>
    <string name="rename_username">Rename username</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="rename">Rename</string>
    <string name="hi">Hi</string>
    <string name="remind_you">Remind you:</string>
    <string name="delete">Delete</string>
    <string name="postpone">Postpone</string>
    <string name="user_rename_successful">User rename successful</string>
    <string name="back">Back</string>
    <string name="note_was_delete">Note was delete</string>
    <string name="undo">Undo</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="edit">Edit</string>
    <string name="the_name_is_too_short">The name is too short</string>
</resources>