<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_bac"
        app:title="@string/Work_with_note"
        app:titleTextColor="@color/white">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/alarmSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="true"
            android:text="@string/notify"
            android:thumb="@drawable/switch_thumb"
            app:switchPadding="8dp" />
    </androidx.appcompat.widget.Toolbar>

    <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toTopOf="@id/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNote"
        app:picker_curved="true"
        app:picker_curvedMaxAngle="45"
        app:picker_cyclic="true"
        app:picker_dayCount="62"
        app:picker_itemSpacing="6dp"
        app:picker_mustBeOnFuture="true"
        app:picker_selectorColor="@android:color/transparent"
        app:picker_stepSizeHours="1"
        app:picker_stepSizeMinutes="1"
        app:picker_visibleItemCount="7" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingVertical="12dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textNote"
        app:layout_constraintStart_toStartOf="@id/textNote" />

    <EditText
        android:id="@+id/textNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_enter_noute"
        android:elevation="4dp"
        android:hint="@string/could_you_enter_note_please"
        android:maxHeight="100dp"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_editor_absoluteX="128dp"
        app:layout_editor_absoluteY="226dp" />


</androidx.constraintlayout.widget.ConstraintLayout>